package edu.fiuba.algo3.modelo;
import java.util.List;


public interface Clima {

    public void afectarCartas(List<Carta> cartas);

}
