package pkg;

public class Turno {
    // Stub mínimo para que compile
}
